[gd_scene load_steps=2 format=3 uid="uid://bl4brc1eqofla"]

[ext_resource type="Script" path="res://Scripts/LevelEditorScene.gd" id="1_jf2gm"]

[node name="LevelEditorScene" type="Node2D"]
script = ExtResource("1_jf2gm")

[node name="Spring" type="Button" parent="."]
offset_top = 34.0
offset_right = 130.0
offset_bottom = 97.0
theme_override_font_sizes/font_size = 40
text = "Spring: $$"

[node name="Item2" type="Button" parent="."]
offset_top = 143.0
offset_right = 130.0
offset_bottom = 206.0
theme_override_font_sizes/font_size = 40
text = "Lasergun: $$"

[node name="Item3" type="Button" parent="."]
offset_top = 258.0
offset_right = 130.0
offset_bottom = 321.0
theme_override_font_sizes/font_size = 40
text = "Extra Life: $$"

[node name="Item4" type="Button" parent="."]
offset_top = 375.0
offset_right = 130.0
offset_bottom = 438.0
theme_override_font_sizes/font_size = 40
text = "Item 4"

[node name="Item5" type="Button" parent="."]
offset_top = 488.0
offset_right = 130.0
offset_bottom = 551.0
theme_override_font_sizes/font_size = 40
text = "Item 5"

[node name="Item6" type="Button" parent="."]
offset_top = 611.0
offset_right = 130.0
offset_bottom = 674.0
theme_override_font_sizes/font_size = 40
text = "Item 6"

[node name="Play Game" type="Button" parent="."]
offset_left = 1050.0
offset_top = 593.0
offset_right = 1261.0
offset_bottom = 656.0
theme_override_font_sizes/font_size = 40
text = "Play Game"

[node name="Money Label" type="Label" parent="."]
offset_left = 950.0
offset_top = 34.0
offset_right = 1101.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 40
text = "Money: "
